# containerd-rust-seal-ci

./: .gitignore  Cargo.toml  README.md
src/: config.json  container_spec.json  main.rs
